# devops-toolset

./: .gitignore  README.md  project.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/: config.json
.github/workflows/: cd.yml  ci.yml
devops_toolset/devops_platforms/: common.py
devops_toolset/project_types/angular/: utils.py
devops_toolset/project_types/aws/: cloudfront.py  get_aws_resources.py  rds.py  s3.py
devops_toolset/project_types/azure/: Literals.py  base.py  common.py  database.py
devops_toolset/project_types/dotnet/: ci_pipeline_kickoff.py  entity_framework.py  scaffold_webapi_solution.py
devops_toolset/tools/: http_protocol.py
docs/: pending-todo.md  python-standardization-plan.md
src/devops_toolset/: configure.py
src/devops_toolset/core/: CommandsCore.py  LiteralsCore.py  commands_core.py  literals_core.py  log_setup.py  settings.py
src/devops_toolset/devops_platforms/: commands.py  common.py  constants.py  literals.py  sonarx.py
src/devops_toolset/filesystem/: literals.py  parsers.py  paths.py  tools.py  zip.py
tests/core/: app_test.py  log_setup_test.py  log_tools_test.py
tests/devops_platforms/: common_test.py  sonarx_test.py
tests/filesystem/: parsers_test.py  paths_test.py  tools_test.py  zip_test.py
tests/i18n/: utils_test.py
tests/tools/: cli_test.py  conftest.py  devops_toolset_utils_test.py  dicts_test.py  git_flow_test.py  git_test.py  http_protocol_test.py  svn_test.py  xcoding_test.py  xmlparser_test.py
tests/toolset/: download_devops_toolset_test.py
(+125 files in other folders)
