[tool.poetry]
name = "devops-toolset"
version = "2.17.7"
description = "General purpose DevOps-related scripts and tools"
authors = [
    "Alberto Carbonell",
    "Iván Sainz"
]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://aheadlabs.com/"
repository = "https://github.com/aheadlabs/devops-toolset"
documentation = "https://github.com/aheadlabs/devops-toolset/docs/"
keywords = ["devops", "script", "tool"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.36.13"
botocore = "^1.36.13"
clint = "^0.5.1"
colorama = "^0.4.6"
requests = "^2.32.3"
setuptools = "^75.8.0"
pendulum = "^3.0.0"
pyfiglet = "^1.0.2"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aheadlabs/devops-toolset/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
